Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -160,7 +160,7 @@
  achievement_cherrypicking_tooltip:0 "従属大名から星3つの指揮官を取り立てます"
  DOMESTIC_DEBASE_CURRENCY:0 "通貨価値の切り下げ"
  VC_LIST_TITLE:0 "我々は以下の勝利のカードを持っています："
- REINFORCE_COST_MODIFIED_BY:0 "補充のコストに対する補正：\n"
+ REINFORCE_COST_MODIFIED_BY:0 "補充コストに対する補正：\n"
  NO_UNREST_IN_COLONY:0 "植民地は不穏度を発生させるには小さすぎます。"
  AUTONOMY_NO_AUTHOIRTY:0 "これ以上権威を下げられないため、自治率は減少させられません。"
  CURR_SPLENDOR_AGE_TT:0 "我々は$VAL|Y$の栄光を持っています。"
@@ -729,7 +729,7 @@
  BASE_PRODUCTION:0 "基本生産"
  BASE_MANPOWER:0 "基本人的資源"
  PP_BASE_TAX_VALUE2:0 "基本税は$VAL|Y$で、1レベルごとに以下を獲得します：\n$EACH$"
- PP_BASE_MP_VALUE:0 "基本人的資源は$VAL|Y$で、1レベルごとに以下を獲得します：\n 最大人的資源：§G+$EACH$§!\n$PROV$"
+ PP_BASE_MP_VALUE:0 "基本人的資源は$VAL|Y$で、1レベルごとに以下を獲得します：\n 最大人的資源：§G+$EACH$§!\n$PROV$"
  PP_BASE_PROD_VALUE:0 "基本生産は$VAL|Y$で、1レベルごとに以下を獲得します：\n$EACH$"
  FORT_CURRENTLY_WITHOUT_MAIN:0 "この要塞は使用停止されています。これは維持費がかかりませんが、守備隊がいない状態を意味します。"
  FORT_CURRENTLY_HALF_MAIN:0 "この要塞は使用停止されており、毎月§Y$CASH$§!¤の維持費がかかります。放置された要塞は半分のコストで維持できますが、守備隊はいません。"
@@ -778,7 +778,7 @@
  IMPPR_NOTCORE:0 "$NAME$はまだ中核州ではないので、$ACTION|Y$することはできません。"
  IMPPR_NOTCORE_SUBJECT:0 "$NAME$は我々の従属国の中核州の一つではないので、まだそこでは$ACTION|Y$することはできません。"
  IMPPR_NOT_ENOUGH_POWER:0 "§R$NAME$での$ACTION$に必要な$POWER|Y$の$TYPE$力を持っていません。§!"
- IMPPR_DO:1 "$NAME$で$TYPE$力$COST|Y$を払って$ACTION$を§G+$AMOUNT$§!すると、以下の効果が得られます：\n$EFFECT$\n  直轄地：$CROWNLAND|+=&1$"
+ IMPPR_DO:1 "$NAME$で$TYPE$力$COST|Y$を払って$ACTION$を§G+$AMOUNT$§!すると、以下の効果が得られます：\n$EFFECT$\n　直轄地：$CROWNLAND|+=&1$"
  IMPROVED_COUNT_TRIGGER_LESS:1 "開発回数が$VAL|Y$回未満である。\n"
  IMPROVED_COUNT_TRIGGER_AT_LEAST:1 "開発回数が$VAL|Y$回以上である。\n"
  IMP_PROV_COST:0 "§Y$PROV$§!の改善に$VAL|Y$の統治、外交または軍事の君主力コストがかかります。§Y$PROV$§!は$COUNT|Y$回の改善が行われています。"
@@ -1033,7 +1033,7 @@
  IS_NOT_IN_RELIGION_GROUP:0 "$RELIGION_GROUP$の宗教グループではない"
  IS_IN_RELIGION_GROUP:0 "$RELIGION_GROUP$の宗教グループである"
  NOT_TECH_ADVANCED_ENOUGH_DOF:0 "信仰の擁護者を主張するには、あらゆる権力ペナルティのない、より高度な技術グループに属している必要があります。"
- ARTILLERY_EXPLANATION:0 "砲兵ボーナスは包囲軍に存在する完全な砲兵連隊の数を要塞レベルで割った値によって決定します。\n$ART$連隊の数は$REG$です。\n要塞レベルは$FORT$です。\n§Y$BONUS$§!＝$REG$÷$FORT$（最大：$MAX$、0を超えている場合は1）"
+ ARTILLERY_EXPLANATION:0 "砲兵ボーナスは包囲軍に存在する完全な砲兵連隊の数を要塞レベルで割った値によって決定します。\n $ART$連隊の数は$REG$です。\n 要塞レベルは$FORT$です。\n §Y$BONUS$§!＝$REG$÷$FORT$（最大：$MAX$、0を超えている場合は1）"
  CV_REBEL_PROGRESS_NONE_AT_WAR:0 "反乱軍は戦争中の国を完全に破壊することはできません。"
  COLONY_MAINTENANCE_COST:0 "$NAME$：§Y+$COST$§!¤ $EXTRA$\n"
  DEFENSIVENESS_LONG:0 "これは、包囲における行動にどれくらいの時間がかかるかに影響します。より高い防衛を持つことは、より良いものです。それはまた、敵に襲撃されたときに我々の守備隊によって被る損害も増加させます。"
@@ -1419,7 +1419,7 @@
  CONFIRM_LEADER_TITLE:0 "新しい指揮官の確認"
  CONFIRM_LEADER_DESC_RULER:0 "統治者を将軍に任命しますか？\n\nこれは統治者を危険に晒すことになりますが、君主点コストはかかりません。"
  CONFIRM_LEADER_DESC_HEIR:0 "後継者を将軍に任命しますか？\n\nこれは後継者を危険に晒すことになりますが、君主点コストはかかりません。"
- CONFIRM_LEADER_DESC_GENERAL:0 "将軍を登用しますか？\n\nこれには§Y$COST$§!£mil£のコストがかかります。"
+ CONFIRM_LEADER_DESC_GENERAL:0 "将軍を登用しますか？\n\n これには§Y$COST$§!£mil£のコストがかかります。"
  CONFIRM_LEADER_DESC_ADMIRAL:0 "提督を登用しますか？\n\nこれには§Y$COST$§!£dip£のコストがかかります。"
  CONFIRM_LEADER_DESC_EXPLORER:0 "探検家を登用しますか？\n\nこれには§Y$COST$§!£dip£のコストがかかります。"
  CONFIRM_LEADER_DESC_CONQ:0 "征服者を登用しますか？\n\nこれには§Y$COST$§!£mil£のコストがかかります。"
@@ -1833,7 +1833,7 @@
  MESOAMERICAN_REFORM_TOOLTIP:1 "§Y$NAME$§!を獲得しますか？獲得により征服したすべての国家とあなたの州のいくつかを解放し、あなたの安定度が§R2§!低下します。"
  CV_UNLOCK_IDEAGROUP_DIALOG_TITLE:0 "アイデアグループ$NAME$の獲得の確認"
  CV_UNLOCK_IDEAGROUP_DIALOG_DESC:0 "アイデアグループ$NAME$を獲得するためにスロットを使用します"
- CV_ABANDON_IDEA_GROUP_DESC:1 "アイデアグループ内すべての実効中のアイデアを削除し、アイデアに必要な基礎君主点の$PERCENTAGE$のみ返還されます。\n\n　このアイデアグループの放棄で$POWER$§Y$VALUE$§!が返還されます。\n\n§Y$NAME$§!を削除してよろしいですか？"
+ CV_ABANDON_IDEA_GROUP_DESC:1 "アイデアグループ内すべての実効中のアイデアを削除し、アイデアに必要な基礎君主点の$PERCENTAGE$のみ返還されます。\n\n このアイデアグループの放棄で$POWER$§Y$VALUE$§!が返還されます。\n\n§Y$NAME$§!を削除してよろしいですか？"
  ABANDON_IDEA_GROUP_TITLE:0 "アイデアグループの放棄"
  ABANDON_IDEA_GROUP_DELAYED:1 "アイデアグループの放棄はグループ内すべてのアイデアを削除し、アイデアに必要な基礎君主点の$PERCENTAGE$のみ返還されます。"
  ABANDON_IDEA_GROUP_REFUND:0 "このアイデアグループの放棄で$POWER$が§Y$VALUE$§!返還されます。"
@@ -2696,7 +2696,7 @@
  NO_INCOME_FROM_NODES:0 "交易による収入は、まだありません。"
  TRADE_OUR_EMBARGOES_LABEL:0 "他国への禁輸"
  TRADE_EMBARGOES_ON_US_LABEL:0 "我が国への禁輸"
- TRANSFERRING_TRADE_TO_US_LABEL:0 "我が国への交易力転送"
+ TRANSFERRING_TRADE_TO_US_LABEL:0 "我が国への交易力移譲"
  TRADE_EMBARGOES_OPINION_OF_YOU:0 "あなたへの評価は$OPINION$です。"
  TRADE_POWER_LEADER:0 "§Y$COUNTRY$§Wは現在、$NODE$で最も高い§Y$POWER$§Wの交易力を持っています。"
  TRADE_NO_POWER:0 "このノードに対する影響力はありません。"
@@ -2878,7 +2878,7 @@
  CV_MILITARY_DISMISS_LEADER_NOTHEIR:0 "後継者将軍は解雇できません！"
  CV_MILITARY_DISMISS_LEADER_NOTCOMM:0 "部隊に任命されている指揮官は解雇できません！"
  WG_ALLOWED_CHANGE_GOVERNMENT:0 "政体を変える"
- PEACE_FORCE_CHANGE_GOVERNMENT:0 "政体を強制する"
+ PEACE_FORCE_CHANGE_GOVERNMENT:0 "政体の強制"
  CONVERT_GOVERNMENT_FORM:0 "$WHO$は政体を§Y$GOV$§!に変更します。"
  PROVINCEVIEW_OTHERS_CAPITAL:0 "$COUNTRY$の首都です。"
  NAVY_CORE_ONLY:0 "海軍部隊は、支配が及んでいる中核州でしか建造できません。"
@@ -3301,7 +3301,7 @@
  FOREIGN_SPY_DEFENCE:0 "$WHO|Y$での諜報員発見：$VALUE$\n"
  CS_NEW_TC_DESC:0 "この新しい交易都市が形成されています。あなたは現在、その色や旗を変更することができます。"
  PEACE_WILL_PROBABLY_ACCEPT:0 "おそらくこの提案を受け入れるでしょう。"
- PEACE_WILL_PROBABLY_NOT_ACCEPT:0 "おそらくこの提案を受け入れることはないでしょう。"
+ PEACE_WILL_PROBABLY_NOT_ACCEPT:0 "おそらくこの提案を受け入れないでしょう。"
  HUMAN_PLAYER_RESPONSE:0 "これは人間のプレイヤーのため、最終的に実際の反応は彼ら次第です。"
  COLONY_TOO_FAR_AWAY:0 "この州は遠すぎます。"
  DISTANCE_TO_COLONY:0 "$NAME|Y$は我々の封鎖されていない、港を持つ最も近い中核州である$CLOSEST|Y$から$DISTANCE|Y0$の距離にあります。"
@@ -3682,7 +3682,7 @@
  TRIGGER_STRONGEST_TRADE_POWER:0 "最も強い交易力"
  TRIGGER_MOST_PROVINCE_TRADE_POWER:0 "最大の州の交易力"
  GRANT_INDEPENDENCE_TOOLTIP:0 "§Y$VASSAL$§!は独立を獲得します。"
- PEACE_GRANT_INDEPENDENCE:0 "独立を付与"
+ PEACE_GRANT_INDEPENDENCE:0 "独立の付与"
  NO_WAR_TROOPS_IN_FOREIGN_AS_VASSAL:0 "部隊がすでに彼らの土地内に位置している場合は、戦争を宣言できません。"
  CANNOT_DOW_SENIOR_PARTNER_WHILE_SUCCESSION_WAR:0 "あなたの王位を巡る継承戦争が行われている間、同君連合上位国に宣戦を布告することはできません。"
  STARTING_IDEA:0 "アイデアの開始：\n"
@@ -4402,11 +4402,11 @@
  MACRO_BUILDR_INCL_TERRITORIES:0 "テリトリーを含める"
  SELECT_RIVAL_TITLE:0 "ライバル選択"
  CONFIRMADDRIVAL:0 "ライバルを確認"
- CONFIRMADDRIVAL_TEXT:0 "ライバルとして$NAME$を設定することで、彼らがライバルであることを世界に発表します。$EFF$\n本当によろしいですか？"
+ CONFIRMADDRIVAL_TEXT:0 "ライバルとして$NAME$を設定することで、彼らがライバルであることを世界に発表します。$EFF$\n 本当によろしいですか？"
  CONFIRMREMOVERIVAL:0 "ライバルの取消"
- CONFIRMREMOVERIVAL_TEXT:0 "$NAME$をライバルから取消には§Y$COST$§!£dip£がかかります。\n本当によろしいですか？"
+ CONFIRMREMOVERIVAL_TEXT:0 "$NAME$をライバルから取消には§Y$COST$§!£dip£がかかります。\n 本当によろしいですか？"
  CONFIRMREPLACERIVAL:0 "ライバル置き換えの確認"
- CONFIRMREPLACERIVAL_TEXT:0 "ライバルとして$NAME$を設定することで、彼らがライバルであることを世界に発表します。$EFF$\nさらに、$OLDRIVAL$をライバルから削除するのに§Y$COST$§!£dip£がかかります。\n本当によろしいですか？"
+ CONFIRMREPLACERIVAL_TEXT:0 "ライバルとして$NAME$を設定することで、彼らがライバルであることを世界に発表します。$EFF$\n さらに、$OLDRIVAL$をライバルから削除するのに§Y$COST$§!£dip£がかかります。\n 本当によろしいですか？"
  THEY_ARE_OUR_RIVAL:0 "ライバルと同盟することはできません。"
  THEY_RIVAL_US:0 "彼らはライバルとして我々を見ているため、同盟することはできません。"
  SELL_PROVINCE_RIVAL:0 "ライバルに州を売ることはできません。"
@@ -4574,8 +4574,8 @@
  doom:0 "破滅"
  authority:0 "権威"
  PARLIAMENT_DEBATE_UNTIL:0 "議論は少なくとも$DATE|Y$まで継続し、その後毎月、終了する可能性が§Y$CHANCE$%§!あります。\nそれに敗北すると我々は$PRESTIGE|R$の威信を失います。"
- CV_DEV_TOTAL_INFO:8 "我々の州の総開発度は$DEV|Y$であり、以下に基づいています：\n $TAX|Y$の基本税\n $PRODUCTION|Y$の生産\n $MANPOWER|Y$の人的資源\n我々は$PROVS|Y$州を持ち、うち$HOME|Y$州がステートの中核州です。\n州の平均自治率：$AVERAGEAUTONOMY|%Y$\nステートの中核州の平均自治率：$AVERAGEHOMEAUTONOMY|%Y$"
- CV_SUB_DEV_TOTAL_INFO:0 "彼らの州の総開発度は$DEV|Y$であり、以下に基づいています：\n $TAX|Y$の基本税\n $PRODUCTION|Y$の生産\n $MANPOWER|Y$の人的資源\n$WHO$は$PROVS|Y$州を持ち、うち$HOME|Y$州が非海外の中核州です。"
+ CV_DEV_TOTAL_INFO:8 "我々の州の総開発度は$DEV|Y$であり、以下に基づいています：\n $TAX|Y$の基本税\n $PRODUCTION|Y$の生産\n $MANPOWER|Y$の人的資源\n我々は$PROVS|Y$州を持ち、うち$HOME|Y$州がステートの中核州です。\n州の平均自治率：$AVERAGEAUTONOMY|%Y$\nステートの中核州の平均自治率：$AVERAGEHOMEAUTONOMY|%Y$"
+ CV_SUB_DEV_TOTAL_INFO:0 "彼らの州の総開発度は$DEV|Y$であり、以下に基づいています：\n $TAX|Y$の基本税\n $PRODUCTION|Y$の生産\n $MANPOWER|Y$の人的資源\n$WHO$は$PROVS|Y$州を持ち、うち$HOME|Y$州が非海外の中核州です。"
  AUTHORITY_FROM_DEV:0 "$ADJ$の開発から：$VAL$"
  DOOM_FROM_PROVINCES:0 "領有している州の数：$VAL$"
  DOOM_FROM_REFORMS:1 "宗教改革の数：$VAL$"
