--- a/source/localisation/core_l_english.yml
+++ b/source/localisation/core_l_english.yml
@@ -265,15 +265,15 @@
  WAR_OVERVIEW_TICKING_WARSCORE_MAX:0 "現在、戦勝点が最大です：$MAXSCORE$。"
  natives_american_inuit:0 "ネイティブ・アメリカンのイヌイット"
  WG_ALLOW_TRADE_POWER:0 "$AMOUNT|Y%1$の交易力を転送"
- TRANSFER_TRADE_POWER_TO_DESC:0 "$FROM$は$TO$に両国が権益を持つ交易ノードにおいて、$AMOUNT|Y%1$の交易力を転送します。これは、停戦期間中も有効です。"
- WOULD_CANCEL_TRANSFERING_TO_OTHER:1 "§Y\n彼らは$WHO$に対する現在の転送も中断するでしょう§!"
- WOULD_LEAVE_TRADE_LEAGUE:0 "§R\nこれは、彼らを$LEADER$が率いる貿易同盟から脱退させることを強制するでしょう§!"
- TRANSFER_OTHERS_TRADE_POWER_TO_DESC:0 "$FROM$はもはや$ORG$に交易力を転送しません。彼らは代わりに両国が交易力を持つ交易ノードにおいて、§Y$AMOUNT|Y%1$§!の交易力を$TO$に転送します。これは、停戦期間中も有効です。"
+ TRANSFER_TRADE_POWER_TO_DESC:0 "$FROM$は$TO$に対し、両国が交易力を持つ交易ノードの交易力$AMOUNT|Y%1$を移譲します。これは、停戦期間中も有効です。"
+ WOULD_CANCEL_TRANSFERING_TO_OTHER:1 "§Y\n彼らは$WHO$に対する現在の移譲も中断するでしょう。§!"
+ WOULD_LEAVE_TRADE_LEAGUE:0 "§R\nこれは、彼らを$LEADER$率いる貿易同盟から強制脱退させることになります。§!"
+ TRANSFER_OTHERS_TRADE_POWER_TO_DESC:0 "$FROM$はもはや$ORG$に交易力を移譲しません。代わりに両国が交易力を持つ交易ノードにおいて、§Y$AMOUNT|Y%1$§!の交易力を$TO$に移譲します。これは、停戦期間中も有効です。"
  HUMILIATE_PEACE_DESC:0 "$FROM$は威信を$AMOUNT|0Y$失い、$TO$は各君主力を$POWER|0Y$得るでしょう。"
  HUMILIATE_RIVAL_PEACE_DESC:0 "$FROM$は屈辱を与えられます。"
- PEACE_TRANSFER_TRADE_POWER:0 "交易力を送出"
- PEACE_TRANSFER_OTHERS_TRADE_POWER:0 "$WHOS$の交易力を転送"
- PEACE_SHOW_STRENGTH:0 "強さを示す"
+ PEACE_TRANSFER_TRADE_POWER:0 "交易力の移譲強要"
+ PEACE_TRANSFER_OTHERS_TRADE_POWER:0 "$WHOS$の交易力移譲"
+ PEACE_SHOW_STRENGTH:0 "強さの誇示"
  PEACE_HUMILIATE:0 "屈辱"
  INFLATION_DESC:0 "インフレは、（他の収入と比較して）金収入が多すぎたり、借金を負うと発生するでしょう。"
  INLAND_SEA_DESC:1 "ここは内海です。ここでは、ガレー船が特に力を発揮し、戦闘時、ガレー船以外の他の艦船に対して100%多くダメージを与えます。"
@@ -869,8 +869,8 @@
  ENFORCE_MILITARY_ACCESS:0 "$FROM$は$TO$に軍事通行権を与えなければなりません。停戦期間が終わるまでこれを取り消すことはできません。"
  ENFORCE_FLEET_BASING_RIGHTS:0 "$FROM$は$TO$に港湾使用権を与えなければなりません。停戦期間が終わるまでこれを取り消すことはできません。"
  WAR_REPARATIONS_DESC:0 "$FROM$は$TO$に毎月収入の$VALUE|0%$を戦争賠償金として支払わなければなりません。これは$YEARS$年間続きます。"
- ENFORED_MILITARY_ACCESS:0 "軍の通行許可を強制"
- ENFORCED_FLEET_BASING_RIGHTS:0 "強制された港湾使用権"
+ ENFORED_MILITARY_ACCESS:0 "軍事通行権の強制"
+ ENFORCED_FLEET_BASING_RIGHTS:0 "港湾使用権の強制"
  WAR_REPARATIONS:0 "戦争賠償金"
  SHOW_AS_ALERT:0 "警告として表示"
  SHOW_AS_POPUP:0 "ポップアップとして表示"
