--- a/source/localisation/emperor_l_english.yml
+++ b/source/localisation/emperor_l_english.yml
@@ -122,7 +122,7 @@
  MODIFIER_RELIGIOUS_CONVERSION_RESISTANCE_DRO:1 "これはあなたの国が改革の中心地からの宗教の広がりに対してどれだけ抵抗できるかを表します。これによってあなたの国の州が改革の中心地に選ばれる可能性が弱まります。"
  MODIFIER_LEGITIMATE_SUBJECT_ELECTOR:0 "正統な従属国の選帝侯"
  MODIFIER_ACCEPT_VASSALIZATION_REASONS:1 "属国化の受諾"
- MODIFIER_TRANSFER_TRADE_POWER_REASONS:0 "交易力転送を受諾"
+ MODIFIER_TRANSFER_TRADE_POWER_REASONS:0 "交易力移譲の受容"
  MODIFIER_LOCAL_WARSCORE_COST_MODIFIER:0 "戦勝点コスト"
  MODIFIER_MERCANTILISM_COST:0 "重商主義推進コスト"
  TRENT_IS_FINISHED:0 "トリエント公会議は終了した"
@@ -351,8 +351,8 @@
  COUNCIL_CONCILATORY_DESC:0 "トリエント公会議で調停的な側に加わりますか？新たな後継者を獲得するまで姿勢を変更することはできません。以下の影響を及ぼします：\n$IMPACT$"
  COUNCIL_CONCESSION_NOT:2 "§Rあなたは教皇の支配者ではありません！§!\n教皇の支配者だけが、トリエント公会議の新しい措置に教皇庁の国庫を使うことができます。コストは、それぞれの側を支持する枢機卿の数によって異なります。"
  COUNCIL_CONCESSION_ALREADY:0 "§Rあなたはすでに反対の姿勢を取っています！§!"
- COUNCIL_CONCESSION_NOT_AFFORD:1 "§R教皇庁にはこの譲歩のための資金が不足しています。§!\n以下の理由により$COST$¤が必要です：\n$WHY$"
- COUNCIL_CONCESSION_CAN_AFFORD:1 "この譲歩は以下の理由により教皇庁に$COST$¤の費用がかかります：\n$WHY$"
+ COUNCIL_CONCESSION_NOT_AFFORD:1 "§R教皇庁にはこの譲歩のための資金が不足しています。§!\n 以下の理由により$COST$¤が必要です：\n $WHY$"
+ COUNCIL_CONCESSION_CAN_AFFORD:1 "この譲歩は以下の理由により教皇庁に$COST$¤の費用がかかります：\n $WHY$"
  CARDINAL_OF_X_REDUCE:0 "\n枢機卿の$PERC|2%Y$が$WHAT$：§G-$VAL|2$§!¤"
  COUNCIL_CONCESSION_C_TITLE:1 "譲歩を採用"
  COUNCIL_CONCESSION_C_DESC:2 "$NAME$の採用には$COST|Y$¤が必要で、以下のボーナスが得られます：\n$IMPACT$"
@@ -418,7 +418,7 @@
  JOIN_EMPIRE_TREATY_NAME:0 "帝国の拡大"
  HRE_LEAVE_STILL_BOUND_BY_TREATY:0 "和平条約により、少なくとも$UNTIL|Y$までは帝国にとどまることができます。"
  PEACE_OPTION_REQUIRES_PROVINCES_TO_JOIN:0 "帝国に追加できる州は残っていません。"
- PEACE_OPTION_ONLY_EMPEROR:0 "現在の皇帝のみがこれを要求できます。"
+ PEACE_OPTION_ONLY_EMPEROR:0 "現皇帝のみがこれを要求できます。"
  ESTATE_CONTROLS:1 "$ESTATE|Y$が国土の$PERCENT|G$を支配している"
  CROWN_CONTROLS:1 "国土の$PERCENT|G$はあなたによって完全に支配されている"
  GRANT_ESTATE_PRIVILEGE:2 "$PRIVILEGE|Y$\n$PRIVILEGE_FLAVOR$\n\n$PRIVILEGE_EFFECTS$"
@@ -1013,7 +1013,7 @@
  EXPAND_EMPIRE_CB:0 "帝国に隣接する非加盟国に対して帝国への参加を強制する開戦事由を与えます。"
  force_peasant_republic_desc:0 "[From.GetName]は農民共和国となります。"
  CB_ALLOWED_force_peasant_republic:0 "農民による支配を強制"
- PEACE_force_peasant_republic:0 "農民による支配を強制"
+ PEACE_force_peasant_republic:0 "農民支配の強制"
  just_lost_war_timer:0 "戦争に敗戦しただけ"
  REINTEGRATE_INTO_HRE_WAR_NAME:0 "$ORDER$$FIRST$・$SECOND$帝国領回復戦争"
  cb_reintegrate_into_hre:0 "皇帝の再征服"
