--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -1478,11 +1478,11 @@
  EVTOPTB5099:0 "これは王家の問題ではない"
  EVTOPTC5099:1 "自由交易こそ未来だ。"
  EVTNAME6000:0 "軽視された海軍の伝統"
- EVTDESC6000:0 "最近、我々の焦点は主に陸軍に向けられている。おそらく、我々は強力な海軍の可能性を見過ごしており、海軍研究にさらなる時間を投資することはないだろう。"
+ EVTDESC6000:0 "最近、我々の焦点は主に陸軍に向けられている。おそらく、我々は強力な海軍の可能性を見過ごしてはならず、海軍研究にもっと時間を投資すべきではないだろうか。"
  EVTOPTA6000:0 "これでいい、陸こそが最も面白い場所だ"
  EVTOPTB6000:0 "我々はこの悪化を止めなければならない"
  EVTNAME6001:0 "軽視された陸軍の伝統"
- EVTDESC6001:0 "最近、我々の焦点は主に海軍に向けられている。おそらく、我々は強力な陸軍の可能性を見過ごしており、陸軍研究にさらなる時間を投資することはないだろう。"
+ EVTDESC6001:0 "最近、我々の焦点は主に海軍に向けられている。おそらく、我々は強力な陸軍の可能性を見過ごしてはならず、陸軍研究にもっと時間を投資すべきではないだろうか。"
  EVTOPTA6001:0 "艦隊は我々にとっての木の壁なのだ！"
  EVTOPTB6001:0 "我々はこの悪化を止めなければならない"
  EVTNAME6002:0 "敵対する軍事学派"
@@ -4219,7 +4219,7 @@
  court_and_country:0 "宮廷と国家"
  desc_court_and_country:0 "我が国の中央集権化への抵抗は、一般的な危機と宮廷と国家との間の紛争の時代に至った。\n§Y我々がこの危機の時代をどのように乗り越えるかで、我々は以前よりも強い国となることができるかもしれない。§!"
  court_and_country_events.1.t:0 "宮廷と国家の紛争"
- court_and_country_events.1.d:0 "地方の貴族や地方裁判所、その他の利益集団によって伝統的に支配されてきた領地を[Root.GetAdjective]国家が侵害したことで、[Root.Monarch.GetTitle]と[Root.Capital.GetCapitalName]の宮廷に対する憤慨が広がることとなった。これらの団体は、現在、中央政府と戦うために団結し、結束している。\n今日、我々は、[Root.Monarch.GetTitle]の代表の古代の権利と不道徳な行為を引き合いに出し、最新の税金令に対する多くの反対意見を受け取った。我々の権力を強化しようとする継続的な試みが、あらゆる機会において妨害されることは明らかである。"
+ court_and_country_events.1.d:0 "地方の貴族や地方裁判所、その他の利益集団によって伝統的に支配されてきた縄張りに対して[Root.GetAdjective]国家が侵害したことで、[Root.Monarch.GetTitle]と[Root.Capital.GetCapitalName]の宮廷に対する憤慨が広がることとなった。これらの団体は、現在、中央権力に対抗するために団結し、結束している。\n今日、我々は、[Root.Monarch.GetTitle]の代表によって古来の権利と不道徳な行為を引き合いに出され、最新の税金令に対する多くの反対意見を受け取った。我々の権力を強化しようとする継続的な試みが、あらゆる機会において妨害されることは明らかである。"
  court_and_country_events.1.a:0 "朕は国家なり。"
  court_and_country_events.1.b:0 "これらフロンドたちと交渉を試みる。"
  court_and_country_events.2.t:0 "税の支払いを拒否"
