--- a/source/localisation/golden_century_l_english.yml
+++ b/source/localisation/golden_century_l_english.yml
@@ -316,7 +316,7 @@
  CAN_ESTABLISH_ORDER:0 "$LOCATION|Y$に修道会を設立できます。"
  CAN_NOT_ESTABLISH_ORDER:1 "$LOCATION|Y$に修道会を設立できません。"
  MODIFIER_CENTER_OF_TRADE_UPGRADE_COST:0 "交易中心地のアップグレードコスト"
- MODIFIER_MISSIONARY_MAINTENANCE_COST:0 "宣教師維持費コスト"
+ MODIFIER_MISSIONARY_MAINTENANCE_COST:0 "宣教師維持コスト"
  MODIFIER_NAVAL_TRADITION_FROM_TRADE:2 "交易を保護からの海軍伝統"
  MODIFIER_ADMIRAL_COST:0 "提督コスト"
  MODIFIER_EXPEL_MINORITIES_COST:0 "マイノリティ追放コスト"
