--- a/source/localisation/text_l_english_0_815.yml
+++ b/source/localisation/text_l_english_0_815.yml
@@ -9,8 +9,8 @@
  MESSAGE_BUTTON_CLEAR:0 "クリア"
  MESSAGE_SEARCH_TOOLTIP:0 "リストをフィルタリングするため、§Yスペース§!で区切られたキーワードを入力してください。"
  TRADEPATROL_REPAIRING:0 "§Rこのユニットは現在修復中です。すぐに任務を継続するでしょう。§!"
- PEACE_VIEW_GOLD_ADD_REMOVE:0 "賠償金の請求、或いは支払いを申し出る金額は§G＋§!や§G－§!によって§G増額§!または§G減額§!¤できます。\n$GOLD|+$¤はおおよそ§Y$WS|+1$§!相当の戦勝点に相当します。"
- PEACE_VIEW_GOLD_ADD_REMOVE_KEYS:0 "§Y右クリック§!で§Gさらに§!追加または削除します。\n§YShift+左クリック§!で§G最大§!まで追加または削除します。"
+ PEACE_VIEW_GOLD_ADD_REMOVE:0 "賠償金を提供・要求する金額は、§G＋§!や§G－§!をクリックすることで§G増額§!・§G減額§!¤できます。\n$GOLD|+$¤はおおよそ戦勝点§Y$WS|+1$§!に相当します。"
+ PEACE_VIEW_GOLD_ADD_REMOVE_KEYS:0 "§Y右クリック§!で§Gさらに§!追加・削除します。\n§YShift+左クリック§!で§G最大§!まで追加・削除します。"
  PEACE_VIEW_GOLD_ADD_KEYS:0 "§Y右クリック§!で§Gさらに§!追加します。\n§YShift+左クリック§!で§G最大§!まで追加します。"
  PEACE_VIEW_GOLD_REMOVE_KEYS:0 "§Y右クリック§!で§Gさらに§!削除します。\n§YShift+左クリック§!で§G最大§!まで削除します。"
  SIEGE_ARTILLERY_EXPLANATION:0 "砲兵は包囲ロールにボーナスを与えます。このボーナスは要塞レベルと比較して大砲の量に依存します。"
@@ -39,7 +39,7 @@
  PROV_RELIGION_TYPE_BELIEVERS:0 "§G熱狂的な信者§!"
  RELIGION_DESC:0 "あなたの国の異なる宗教に対する寛容度に応じて、州はさまざまな分野で正と負の両方の効果を持つことができます。"
  TRADER_DISCOVERED:0 "交易ノードが発見されます。"
- PEACE_CANNOT_GIVEUP_US_COST:0 "私たちの州の総平和コストが大きすぎます。"
+ PEACE_CANNOT_GIVEUP_US_COST:0 "我々の州の総講和コストが大きすぎます。"
  GOTO_HOME:0 "本国の首都に行きます"
  CONNECT_TO_SHIP_LOW_MORALE:0 "ユニットの士気が低下しています。"
  FE_IRONMAN_GAMENOTOK:0 "鉄人モードにはMODが導入されていない有効なEU4が必要です。"
