Save/Update files [ci skip]

--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -1595,7 +1595,7 @@
  flavor_guj.13.t:0 "ミラト＝イ・シカンドリ"
  flavor_guj.13.d:0 "グジャラート・スルターン朝は歴史的な文学の豊かな伝統を持ち、多くの宮廷の歴史家たちが我々の王朝の後援を受けた。最近完成したシャイフ・シカンダル・イブン・ムハンマド・マンジューによるミラト＝イ・シカンドリは、この優れた模範であるだけでなく、以前のすべての著作をその主題に取り入れようと試みている。その結果としての作品は、創設から今日までのグジャラート・スルターン朝の歴史に関する詳細な記録である。"
  flavor_guj.13.a:0 "OK"
- CS_NAME_TAKEN:0 "§R称号を獲得！§!"
+ CS_NAME_TAKEN:0 "§R使われている名前です！§!"
  enforced_reservatum_ecclesiasticum:0 "聖職者に関する留保の原則を強制"
  refused_to_resign:0 "辞任を拒否"
  sent_mercenaries:0 "傭兵派遣"
