--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -674,7 +674,7 @@
  flavor_eng.EVTOPTA9109:0 "イングランド国教会の指揮を取る"
  flavor_eng.EVTOPTB9109:0 "ローマ教皇の優位性を受け入れる"
  flavor_eng.EVTNAME9111:0 "海軍本部"
- flavor_eng.EVTDESC9111:0 "海軍本部は、拡大する海軍力に海上で効率的かつ強力な戦略的指導力を与えるために設立された。それ以前は奇妙な国王の船がいくつか存在するだけで、それぞれは国王の私有財産であった。海軍本部が全軍艦や新しい軍艦の建造、古い軍艦の整備に責任を持つことで、英海軍は継続性と秩序を得た。海軍本部は軍事指揮官のための養成所というだけでなく、ロンドンの政治生命における要職でもあった。"
+ flavor_eng.EVTDESC9111:0 "海軍本部は、拡大する海軍力に海上で効率的かつ強力な戦略的指導力を与えるために設立された。それ以前は中途半端な国王の船がいくつか存在するだけで、いずれも国王の私有財産であった。海軍本部が全軍艦や新しい軍艦の建造、古い軍艦の整備に責任を持つことで、英国海軍は継続性と秩序を獲得した。海軍本部は軍事指揮官のための養成所というだけでなく、ロンドン政界における要職でもあった。"
  flavor_eng.EVTOPTA9111:0 "我々は海軍本部を認可しよう"
  flavor_eng.EVTOPTB9111:0 "代わりに英国陸軍を設立させよう"
  flavor_eng.EVTNAME9112:0 "英国陸軍"
