--- a/source/localisation/domination_l_english.yml
+++ b/source/localisation/domination_l_english.yml
@@ -428,7 +428,7 @@
  fra_stronger_than_any_cath_tt:0 "全ての§Yカトリック§!国家より多くの陸軍を保有する"
  fra_religious_cb_on_every_muslim_gp_tt:1 "\nたとえ国境を接しなくても、§Yムスリム§!の大国全てに対して開戦事由§Y聖戦§!を獲得します"
  fra_if_we_complete_mission_while_allied_or_subject_and_175_opinion_and_100_trust_access_to_holy_orders_tt:2 "\n外交評価§Y190§!以上、信頼度§Y100§!以上ある、イベリア文化グループの§Y従属国§!もしくは§Y同盟国§!がいる状態でこのミッションを達成した場合、キリスト教の§Y修道会§!メカニクスが利用可能"
- fra_country_or_subject_or_overlord_owns_tt:0 "§Y自国§!か自国の朝貢国以外の従属国か自国の§Y宗主国§!が領有している"
+ fra_country_or_subject_or_overlord_owns_tt:0 "§Y自国§!か自国の従属国（非朝貢国）か自国の§Y宗主国§!が領有している"
  fra_if_choose_to_destroy_empire_tt:0 "§Y神聖ローマ帝国§!の消滅を選択した場合、このミッションは、自国の§Y東ドイツ国境§!を押し上げ、§Yフランスの緩衝地帯§!を生み出します。"
  fra_if_choose_to_lead_empire_tt:0 "\n一方で、§Y神聖ローマ帝国§!を導くルートを選択した場合、このミッションは§Y選帝侯§!の心を揺さぶり、さらには新たな§Y帝国事件§!を進めることができるようになります。"
  fra_if_choose_to_break_habsburg_ring_by_conquering_swaths_of_the_germanic_provinces_tt:0 "§Y神聖ローマ帝国§!の征服を選択した場合、このミッションは、§Y北ドイツ§!と§Y南ドイツ§!の広大な領域を征服する機会をもたらします。"
@@ -454,8 +454,8 @@
  fra_change_flag_to_defy_tt:0 "イタリアに対する姿勢について、@PAP 教皇領への融和的態度から切り替えます。この変更により、新たなミッションが解放されます。"
  fra_lapdog_reward_cambrai_tt:0 "@PAP 教皇領と協調してミッションを達成した場合、必要な領土は教皇庁領に割譲されると共に以下を獲得します："
  fra_as_long_as_owned_by_pap_or_subject_desc:0 "ヴェネチアが@PAP 教皇領または彼らの従属国が領有している限り"
- fra_northern_italy_by_you_subject_or_papal_states_or_subject_tt:0 "§Y北イタリア§!を自国か自国の朝貢国以外の従属国、もしくは§Y教皇領§!か教皇領の朝貢国以外の従属国が領有している"
- fra_northern_italy_by_you_subject_tt:1 "§Y北イタリア§!を自国か自国の朝貢国以外の従属国が領有している"
+ fra_northern_italy_by_you_subject_or_papal_states_or_subject_tt:0 "§Y北イタリア§!を自国か自国の従属国（非朝貢国）、もしくは§Y教皇領§!か教皇領の従属国（非朝貢国）が領有している"
+ fra_northern_italy_by_you_subject_tt:1 "§Y北イタリア§!を自国か自国の従属国（非朝貢国）が領有している"
  fra_cede_northern_italy_to_pope_coronation_and_tt:0 "§Y教皇庁§!と§M連携§!してミッションを達成した場合、教皇が自国の次の君主に§Y戴冠§!を行い、その統治期間中に特別なボーナスを与えます："
  fra_alternatively_gain_following_evolving_reward_tt:0 "\n代わりに、次の§M進化した§!報酬を獲得します："
  fra_if_lapdog_reward_tt:0 "§Y教皇庁§!と§M連携§!してミッションを達成した場合："
@@ -507,7 +507,7 @@
  fra_inno_mana_tt:0 "ミッション§Y条件§!を満たす全州で、§Y革新性§!を1、君主力£adm£・£dip£・£mil£をそれぞれ10獲得"
  fra_enacted_retrial_tt:0 "国家の決断「§Yジャンヌ・ダルクの命運§!」を制定している"
  fra_enable_infrastructure_network_tt:1 "国家布告「§Yフランスのインフラ網§!」が利用可能になります"
- fra_develop_urban_centers:0 "\n§Yフランス§!地方で自国か自国の朝貢国以外の従属国が領有する開発度§Y25§!以上あるすべての州で、以下の報酬を獲得します："
+ fra_develop_urban_centers:0 "\n§Yフランス§!地方で自国か自国の従属国（非朝貢国）が領有する開発度§Y25§!以上あるすべての州で、以下の報酬を獲得します："
  fra_region_special_tt:0 "自国か自国の従属国（非朝貢国）が領有する§Yフランス§!地方にある州すべてが以下を満たす：\n§Y2§!回以上改善されている、または建物が§Y1§!つ以上ある\n荒廃度が§Y1§!未満\n最小値以上の平均自治率が§Y5.00%§!未満"
  french_infrastructure_network:0 "フランスのインフラ網"
  unlocked_if_tt:0 "ミッション報酬でこの布告が解禁されている"
@@ -1233,7 +1233,7 @@
  mjz_accept_any_altaic_tt:0 "\nいずれかの§Yアルタイ§!文化を受容することでミッションを完了した場合："
  mjz_extend_dominance_modifier_tt:0 "補正「§Y馬の主の支配§!」はさらに§G10§!年間延長されます"
  mjz_subjugation_reaward_tt:0 "\n§Yアルタイ§!文化の国家を従属化させることでミッションを完了した場合："
- mch_manchuria_region_minus_2_provinces_tt:0 "[1033.GetName]州および[4658.GetName]州を除く満州地方を自国もしくは自国の朝貢国以外の従属国で領有する"
+ mch_manchuria_region_minus_2_provinces_tt:0 "[1033.GetName]州および[4658.GetName]州を除く満州地方を自国もしくは自国の従属国（非朝貢国）で領有する"
  mch_event_insight_9_tt:0 "\n§Gイベントインサイト§!：\nこのイベントは。いつか部族を統一し、新たな§Y王朝§!を宣言することになる§Y伝説の将軍§!の物語を語ります。"
  mjz_all_country_of_manchuria_of_root_culture_less_army_than_root_tt:0 "§Y満州地方§!に首都が有り、自国の§Y文化§!に従っていて[Root.GetName]より少ない§Y陸軍§!しか持ってない国家全て"
  mch_event_insight_10_tt:0 "\n§Gイベントインサイト§!：\nこのイベントは、§Y中国§!の征服を始めるにあたって、君主に§Y強力な§!補正を与えてくれます"
@@ -1355,7 +1355,7 @@
  qng_presence_global_market_modifier:0 "世界市場への存在感"
  qng_industrial_revolution_modifier:0 "産業の熱狂"
  qng_center_of_industrialization_modifier:0 "産業革命の中心"
- qng_north_china_gets_tt:0 "§Y華北§!にある自国か自国の朝貢国以外の従属国が領有する全州は以下を獲得します："
+ qng_north_china_gets_tt:0 "§Y華北§!にある自国か自国の従属国（非朝貢国）が領有する全州は以下を獲得します："
  qng_branching_mission_open_tt:1 "§Y港湾の開放後§!、このミッションを完了するための条件は以下の通りです："
  qng_complete_3_stab_5_crownland_tt:1 "\n安定度§G3§!の状態でこのミッションを達成した場合、さらに§Y直轄地5%§!を獲得"
  qng_branching_mission_isolated_tt:1 "一方、§Y港湾の閉鎖後§!、このミッションを完了するための条件は以下の通りです："
@@ -6074,8 +6074,8 @@
  flavor_jap.73.d:0 "元来は女性の武士として仕えていた女武者は、私たち帝国の黎明期に高く評価された戦士でした。彼女らは封建時代の日本では侍階級に属し、戦時には家、家族、名誉を守るために武器の使い方を訓練されました。やがて彼女らは有能な指揮官として戦場で頭角を現し、印象的な勝利を収め、歴史書にその名を刻むようになりました。\n\nしかし、江戸時代の朱子学の影響によって、女武者の地位は大幅に低下しました。夫だけでなく女武者の役割も変化しました。侍はもはや戦闘や戦争に関心をもたず、彼らは官僚でした。女性、特に大半の上流階級の家庭の娘は、やがて成功と権力を夢見るための駒になりました。恐れ知らずの献身と無私という活発な理想像は、次第に静かで受け身で俗世的な従順に取って代わられました。これにもかかわらず、未だに多くの女性たちが指揮官として国の軍隊に仕え、国の崇高な大義のために命を捧げることを謙虚に願っています。女性武士の偶像として有名な例の一人が大祝鶴姫です。彼女は勇敢に何度も戦場に赴き、神の啓示を受けたと主張し、戦闘技術も相まって、ジャンヌ・ダルクのような人物と比較されるようになりました。彼女の遺産は、日本の歴史上で最も知られる女性戦士の一人として、間違いなく確立されることでしょう。"
  flavor_jap.73.a:0 "女武者が活動し続けることを容認する。"
  flavor_jap.73.b:0 "彼女らの時代は終わり、権力と官僚の駒として働くことになるでしょう！"
- JAP_OF_SPICE_AND_HERBS_SPICE_TT:0 "[Root.GetName]もしくはその朝貢国以外の従属国が領有していて、§Y香辛料§!を生産している全州で、「§Y香辛料の需要増§!」を§Y25年間§!獲得し、以下の効果を獲得します：\n　州の交易品生産補正：§G+15.0%§!"
- JAP_OF_SPICE_AND_HERBS_TEA_TT:0 "[Root.GetName]もしくはその朝貢国以外の従属国が領有していて、§Y茶§!を生産している全州で、「§Y茶の需要増§!」を§Y25年間§!獲得し、以下の効果を獲得します：\n　州の交易品生産補正：§G+15.0%§!"
+ JAP_OF_SPICE_AND_HERBS_SPICE_TT:0 "[Root.GetName]もしくはその従属国（非朝貢国）が領有していて、§Y香辛料§!を生産している全州で、「§Y香辛料の需要増§!」を§Y25年間§!獲得し、以下の効果を獲得します：\n　州の交易品生産補正：§G+15.0%§!"
+ JAP_OF_SPICE_AND_HERBS_TEA_TT:0 "[Root.GetName]もしくはその従属国（非朝貢国）が領有していて、§Y茶§!を生産している全州で、「§Y茶の需要増§!」を§Y25年間§!獲得し、以下の効果を獲得します：\n　州の交易品生産補正：§G+15.0%§!"
  jap_hire_female_generals:0 "自軍は今後も指揮官として女性を受け入れ続けるだろう"
  japan_increased_demand_of_spice:0 "香辛料の需要増"
  japan_increased_demand_of_tea:0 "茶の需要増"
