--- a/source/localisation/rights_of_man_l_english.yml
+++ b/source/localisation/rights_of_man_l_english.yml
@@ -135,7 +135,7 @@
  CV_DEBASE_CURRENCY:0 "通貨価値の切り下げ"
  CAN_DEBASE_EARLIEST:0 "汚職が§Y$MAX_CORRUPTION$%§!より低いと仮定して、最短で$DATE$に再度切り下げることができます。"
  NO_MORE_DEBASING:0 "汚職レベルが§Y$MAX_CORRUPTION$%§!を超えているため、通貨価値を切り下げることはできません。"
- DEBASE_CURRENCY_MORE:0 "§YShift§!を押した状態で、可能な最大量である$FACTOR|Y$回、通貨価値を切り下げます。"
+ DEBASE_CURRENCY_MORE:0 "§YShift§!を押しながらで、使用可能な最大回数である$FACTOR|Y$回、通貨価値を切り下げます。"
  DEBASE_CURRENCY_EXPLAIN:0 "\n通貨価値を再度切り下げられるようになるには$MONTHS$ヶ月かかり、最大$MAX_USES$回分まで使用可能回数がストックされます。"
  DEBASE_CURRENCY:0 "通貨価値の切り下げは§Y$AMOUNT$§W¤をもたらしますが、汚職が§R$CORRUPTION$%§!増加します。\n\nあなたはさらに$FACTOR|Y$回、あるいは汚職が§R$MAX_CORRUPTION$%§!に到達するまで、通貨価値を切り下げることができます。"
  alert_leaving_great_power_instant:0 "§Y列強の地位を喪失中§!"
