--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -1909,10 +1909,10 @@
  CLAIM_DEFENDER_OTHER_TITLE:0 "信仰の擁護者を主張"
  CLAIM_DEFENDER_OTHER_SETUP:0 "誰かが信仰の擁護者を自称したとき"
  CLAIM_DEFENDER_OTHER_HEADER:0 "信仰の擁護者"
- CLAIM_DEFENDER_OTHER_1:0 ""
- CLAIM_DEFENDER_OTHER_2:0 "$COUNTRY$"
- CLAIM_DEFENDER_OTHER_3:0 "国家が以下の称号を主張しました。"
- CLAIM_DEFENDER_OTHER_4:0 "$RELIGION|Y$信仰の擁護者"
+ CLAIM_DEFENDER_OTHER_1:0 "国家たる"
+ CLAIM_DEFENDER_OTHER_2:0 "$COUNTRY$が"
+ CLAIM_DEFENDER_OTHER_3:0 "$RELIGION|Y$信仰の擁護者"
+ CLAIM_DEFENDER_OTHER_4:0 "の称号を主張しました。"
  CLAIM_DEFENDER_OTHER_5:0 "我々は彼らの虚勢を冷笑しています。"
  CLAIM_DEFENDER_OTHER_LOG:0 "$COUNTRY$、信仰の擁護者を主張"
  CLAIM_DEFENDER_OTHER_BTN1:0 "OK"
@@ -4192,9 +4192,9 @@
  OTHERTHREATENWAR_HEADER:0 "$MESSENGER$"
  OTHERTHREATENWAR_1:0 "武力脅迫を受諾"
  OTHERTHREATENWAR_2:0 "$MONARCHTITLE$、$RECIPIENT$は"
- OTHERTHREATENWAR_3:0 "$ACTOR$へ"
- OTHERTHREATENWAR_4:0 "$PROVINCE$を"
- OTHERTHREATENWAR_5:0 "割譲するという要求を受諾しました。"
+ OTHERTHREATENWAR_3:0 "$PROVINCE$を"
+ OTHERTHREATENWAR_4:0 "$ACTOR$へ割譲する"
+ OTHERTHREATENWAR_5:0 "という要求を受諾しました。"
  OTHERTHREATENWAR_6:0 "$TRUCEDATE$まで停戦状態となります。"
  OTHERTHREATENWAR_LOG:0 "$ACTOR$、武力脅迫による要求により、$RECIPIENT$から$PROV$を割譲させる"
  OTHERTHREATENWAR_BTN1:0 "OK"
