--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -2450,9 +2450,9 @@
  PEACE_RELEASE:0 "国家の解放"
  PEACE_WARSCORE:0 "戦勝点"
  PEACE_FORCE_RELIGION:0 "改宗の強制"
- PEACE_FORCE_VASSAL_2:0 "@$FLAG$ $BOSS$の属国化"
- PEACE_FORCE_PROTECTORATE:0 "@$FLAG$ $BOSS$の保護国化"
- PEACE_FORCE_TRIBUTARY:0 "@$FLAG$ $BOSS$の朝貢国化"
+ PEACE_FORCE_VASSAL_2:0 "@$FLAG$ $BOSS$の属国"
+ PEACE_FORCE_PROTECTORATE:0 "@$FLAG$ $BOSS$の保護国"
+ PEACE_FORCE_TRIBUTARY:0 "@$FLAG$ $BOSS$の朝貢国"
  PEACE_FORCE_UNION:0 "$NATION$との同君連合"
  PEACE_CONCEDE_COLONIAL_REGION:0 "@$FLAG$ $REGION$譲与"
  CONCEDE_COLONIAL_REGION:0 "植民地範囲を認める"
