Save/Update files [ci skip]

--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -536,7 +536,7 @@
  emp_hun_strong_government_title:0 "強い政府"
  emp_hun_strong_government_desc:0 "どんな障害に直面しようが動じないよう、国家を改革せねばならない。"
  emp_hun_hungarian_succession_title:0 "ハンガリーの継承"
- emp_hun_hungarian_succession_desc:0 "ヴァルナ十字軍の失敗は、自国の指導者不在という不安定な状態にした。機に乗じようとしている隣国全てから自国の独立が奪われないよう、この危機を交渉せねばならない。"
+ emp_hun_hungarian_succession_desc:0 "ヴァルナ十字軍の失敗により、自国の指導者が不在という不安定な状態に陥った。機に乗じようとしている隣国全てから自国の独立が奪われることなく、この危機を切り抜けなければならない。"
  emp_hun_hungarian_succession_tooltip:0 "以下のいずれかが満たされている：\n　イベント§Y「マーチャーシュ・コルヴィヌス」§!が発生済みである。\n　§Y1457§!年以降である。"
  emp_hun_bohemian_borderlands_title:0 "ボヘミアの国境地帯"
  emp_hun_bohemian_borderlands_desc:0 "ボヘミア選帝侯は自国北西部の国境地帯を領有している。強大で繁栄した王国は堕落した異端どもと関わり合いがあることが分かっており、彼らが自領で広がるのを防ぐため、彼らに対して措置を講ずるべきだ。"
@@ -814,7 +814,7 @@
  emp_ned_seize_ceylon_title:0 "セイロン島の獲得"
  emp_ned_seize_ceylon_desc:0 "セイロンの豊かな島は、それ自体が収益性の高い収入源であるだけでなく、さらに東へ航行する船の主要な中間地点でもある。我々がそれを手に入れなければ、我々の敵がきっとそうするだろう。"
  emp_ned_found_batavia_title:0 "バタヴィアの創立"
- emp_ned_found_batavia_desc:0 "東インド諸島での我々の存在感を高めるには、近くに統治上の中心地が必要であり、そこでは、商人を銃で守り、我々の船を安全に埠頭につけることができる。"
+ emp_ned_found_batavia_desc:0 "東インド諸島での我々の存在感を高めるには、商人を銃で守り、船舶を安全に停泊できる、最寄りの統治上の中心地が必要である。"
  emp_ned_conquer_malacca_title:0 "マラッカの征服"
  emp_ned_conquer_malacca_desc:0 "マラッカは東インド諸島の重要な町であり、それが競争相手の手に落ちるのは容認できない。我々はそれを獲得しなければならない！"
  emp_ned_dutch_formosa_title:0 "オランダ領フォルモサ"
@@ -883,7 +883,7 @@
  emp_ned_control_coromandel_trade_title:0 "コロマンデルの支配"
  emp_ned_control_coromandel_trade_desc:0 "我々のセイロンの拠点からは、南インドの豊かな市場がすぐ近くにある。この機会を無視して我々の経済範囲を拡大することは、我々にとっては全くの狂気としか言いようがないだろう。"
  emp_ned_dutch_east_indies_title:0 "オランダ領東インド"
- emp_ned_dutch_east_indies_desc:0 "我々のインド諸国での交易は繁盛しているが、地域の経済的支配が政治的支配と一致しない限り、商業と商人の安全は危機に晒されている。地域の繁栄と国益のために、できる限り多くのインドの領土を我々の支配下に置くことが不可欠である。"
+ emp_ned_dutch_east_indies_desc:0 "我々のインド諸国での交易は繁盛しているが、地域の経済的支配が政治的支配と一致しない限り、商業と商人の安全は危機に晒されている。地域の継続的な繁栄と国益のために、できる限り多くのインドの領土を我々の支配下に置くことが不可欠である。"
  ned_security_on_and_from_the_sea:0 "洋上から確保せよ"
  desc_ned_security_on_and_from_the_sea:1 "その名にふさわしい海軍は、我々の海岸と我々の利益を保護するのに役立っている。"
  ned_fixed_garrisons:0 "固定化した守備隊"
