--- a/source/localisation/core_l_english.yml
+++ b/source/localisation/core_l_english.yml
@@ -738,7 +738,7 @@
  NOMAD_SHOCK_PENALTY_ATT:0 "遊牧民が平地にいないため、攻撃側が受ける突撃ダメージが§R$VAL|%=+1$§!減少します。\n"
  GALLEY_BONUS_INLAND_SEA_DESC:0 "ガレー船は、内海ではガレー船以外に対して$VAL|%=+1$の追加ダメージを与えます。"
  GALLEY_BONUS_NOT_INLAND_SEA_DESC:1 "ここは内海・沿岸ではないため、ガレー船は$VAL|%=+1$のダイスペナルティーを受けます。"
- INSUFFICIENT_SUPPORT_DESC:1 "前列の騎兵の比率が高すぎます（§Y$RATIO$%§!）。これにより騎兵連隊の軍事戦術が§R$PENALTY$%§!低下します。"
+ INSUFFICIENT_SUPPORT_DESC:1 "前列の騎兵の比率が高すぎます（§Y$RATIO$%§!）。これにより騎兵連隊の軍事戦術が§R$PENALTY$%§!されます。"
  INSUFFICIENT_SUPPORT_UNIT_DESC_YES:0 "@$TAG$$NAME$はペナルティを受けます（最大比率$MAX|%1R$）。"
  INSUFFICIENT_SUPPORT_UNIT_DESC_NO:0 "@$TAG$$NAME$はペナルティを受けません（最大比率$MAX|%1G$）。"
  FE_IRONMAN_MULTIPLAYER:0 "鉄人モードはマルチプレイで使用できません。"
