--- a/extract/localisation/domination_l_english.yml
+++ b/extract/localisation/domination_l_english.yml
@@ -2211,7 +2211,7 @@
  mechanic_manpower_from_capturing_forts_yes:0 "Capturing enemy forts gives §G0.1§! Years worth of Manpower per Fort Level (effect can only occur every §Y5 years§! per fort)"
  mechanic_manpower_from_defeating_armies_yes:0 "Winning battles gives us §G10%§! manpower of the enemy troops which fell in battle"
  ashigaru_reform:0 "Ashigaru Regiments"
- ashigaru_reform_desc:0 "The ubiquity of conflicts and wars in Japan during the Sengoku Jidai gave rise to a new class of warriors, the ashigaru. While peasants and technically not samurai, the easier accessibility to them in comparison to the samurai turned them into the backbone of any army. Armed with spears, bows and swords, their constant presence in battle made them into a class between the farmers and the samurai, being in some cases even considered as part of the lower strata of samurai. Hover, it was with the introduction of the tanegashima teppou, the Japanese adaption of the matchlock, that their presence truly shined. Its easier learning curve compared to the bow, combined with the superior numbers of the ashigaru compared to the samurai, made it so that ashigaru armed with matchlocks became the main part of any Japanese army."
+ ashigaru_reform_desc:0 "The ubiquity of conflicts and wars in Japan during the Sengoku Jidai gave rise to a new class of warriors, the ashigaru. While peasants and thus technically not samurai, the easier accessibility to them in comparison to the samurai turned them into the backbone of any army. Armed with spears, bows and swords, their constant presence in battle made them into a class between the farmers and the samurai, being in some cases even considered as part of the lower strata of samurai. Hover, it was with the introduction of the tanegashima teppou, the Japanese adaption of the matchlock, that their presence truly shined. Its easier learning curve compared to the bow, combined with the superior numbers of the ashigaru compared to the samurai, made it so that ashigaru armed with matchlocks became the main part of any Japanese army."
  early_bushido_code_reform:0 "Early Bushido Code"
  early_bushido_code_reform_desc:0 "Bushido is a moral code dictating the attitude, behavior and lifestyle of the samurai. Though the code would get its mythical status in the centuries to come, its base concepts have been part of it ever since its first inception."
  early_bushido_modifier:0 "Early Bushido Code"
@@ -2361,8 +2361,8 @@
  devshirme_assign_local_pashas_at:0 "Every owned, §YHeathen§! province gains the following effects:"
  elective_monarchy_reform:0 "Elective Monarchy"
  elective_monarchy_reform_desc:0 "Elective monarchies choose their heir instead of having them come to power through a succession law. The nobility can propose a candidate from a foreign dynasty, from their own midst or other members of the royal family."
- mechanic_has_ruler_election_yes:0 "Has §YRule Election§! when a new ruler ascends the throne"
- mechanic_has_improved_ruler_election_yes:0 "Increase the skills of candidates of the §YRule Election§!"
+ mechanic_has_ruler_election_yes:0 "Has §YRuler Election§! when a new ruler ascends the throne"
+ mechanic_has_improved_ruler_election_yes:0 "Increase the skills of candidates of the §YRuler Election§!"
  mechanic_cheaper_coastal_province_core_yes:0 "Coastal provinces cost §G-10.0%§! Governing Capacity and §G-25.0%§! to turn them into core provinces"
  british_monarchy:0 "British Monarchy"
  british_monarchy_desc:0 "The natural evolution of the English Monarchy and the Scottish government. The parliaments of both states have been unified into the parliament of Great Britain."
@@ -2740,6 +2740,7 @@
  tur_defeat_the_mamluks_title:0 "Defeat the Mamluks"
  tur_defeat_the_mamluks_desc:0 "The Mamluk Sultanate of Egypt has been the dominant power of the Islamic world since the Mongols sacked Baghdad. While they call themselves the protectors of the Caliph and the Holy City they have grown weak and decadent. The time is perfect to lay claim to their Syrian possessions and liberate the holiest cities of Jerusalem and Dimashq from their grip."
  tur_defeat_the_mamluks_at:0 "Using this casus belli against the @MAM §YMamluks§! will enable a special chain of events which can be triggered when we control §Y[MAM.Capital.GetName]§!.\nThis event will allow us to establish a §YCore Eyalet§! in §YEgypt§!."
+ tur_defeat_the_mamluks_tt:0 "§Y[Root.GetName]§! gains a permanent claims on the areas of §YBahrain§!, §YTabuk§!, §YAn Nafud§!, §Yal-Qasim§!, §YMedina§! and §YMecca§!."
  tur_conquer_persia_title:0 "End the Persian Threat"
  tur_conquer_persia_desc:1 "The region of Persia has been ruled by numerous empires, being the last one the Timurids, the insidious force which laid waste to the hills of Anatolia. Even though the power of the Timurids is not what it used to be, a new empire might rise in this region; a new Persian lion which will try to dismantle us. We must strike first and end the threat to our eastern flank once and for all."
  tur_conquer_greece_title:0 "Reign in Greece"
@@ -3571,6 +3572,7 @@
  commercial_enterprise_overlord:0 "Commercial Enterprise Overlord"
  commercial_enterprise_subject:0 "Commercial Enterprise Subject"
  commercial_enterprise_is_our:0 "§Y$NAME$§! is our Commercial Enterprise"
+ commercial_enterprise_no_overlord_dow:0 "We may not declare war on our Commercial Enterprise subjects."
  trade_protectorate:0 "Trade Protectorate"
  trade_protectorate_long_desc:0 "A trade protectorate is a relationship between a strong maritime power with a weaker local realm. The subject transfers all trade influence to their overlord in return for their protection. Although a subject relationship, trade protectorates act autonomously and can break the trade agreement with their overlord."
  trade_protectorate_title:0 "Trade Protectorate"
