--- a/extract/localisation/achievements_l_english.yml
+++ b/extract/localisation/achievements_l_english.yml
@@ -32,7 +32,7 @@
  NEW_ACHIEVEMENT_1_17_NAME:0 "True Catholic"
  NEW_ACHIEVEMENT_1_17_DESC:0 "Control three Cardinals."
  NEW_ACHIEVEMENT_1_18_NAME:0 "Truly Divine Ruler"
- NEW_ACHIEVEMENT_1_18_DESC:0 "Get a 5/5/5 Ruler."
+ NEW_ACHIEVEMENT_1_18_DESC:1 "Get a 5/5/5 Ruler or higher."
  NEW_ACHIEVEMENT_1_19_NAME:0 "Italian Ambition"
  NEW_ACHIEVEMENT_1_19_DESC:0 "Form Italy."
  NEW_ACHIEVEMENT_1_20_NAME:0 "Cold War"
@@ -86,7 +86,7 @@
  NEW_ACHIEVEMENT_6_12_NAME:0 "No Trail of Tears"
  NEW_ACHIEVEMENT_6_12_DESC:0 "Own and have cores on the Thirteen Colonies as Cherokee with all institutions embraced."
  NEW_ACHIEVEMENT_6_13_NAME:0 "One Night in Paris"
- NEW_ACHIEVEMENT_6_13_DESC:0 "Start as England, own and have a core on Paris (do not form another country unless it's Great Britain)."
+ NEW_ACHIEVEMENT_6_13_DESC:1 "Start as England, own and have a core on Paris (do not form another country unless it's Great Britain or the Angevin Kingdom)."
  NEW_ACHIEVEMENT_6_14_NAME:0 "Definitely the Sultan of Rum"
  NEW_ACHIEVEMENT_6_14_DESC:0 "Own and have cores on Rome, Moscow and Istanbul as Ottomans."
  NEW_ACHIEVEMENT_6_15_NAME:0 "Market Control"
@@ -168,7 +168,7 @@
  NEW_ACHIEVEMENT_7_22_NAME:0 "This Revolution Was Crushed"
  NEW_ACHIEVEMENT_7_22_DESC:0 "In a war against the target of the Revolution, control their capital and have at least 99% war score."
  NEW_ACHIEVEMENT_7_23_NAME:0 "Land of Eastern Jade"
- NEW_ACHIEVEMENT_7_23_DESC:0 "Own a core province in Central America as a Buddhist country."
+ NEW_ACHIEVEMENT_7_23_DESC:1 "Own a core province in the Mexico region as a Buddhist country."
  NEW_ACHIEVEMENT_7_24_NAME:0 "That's a Silk Road"
  NEW_ACHIEVEMENT_7_24_DESC:0 "Own or have a subject own all provinces in the world producing silk."
  NEW_ACHIEVEMENT_7_25_NAME:0 "My True Friend"
@@ -308,7 +308,7 @@
  NEW_ACHIEVEMENT_9_28_NAME:0 "The Third Way"
  NEW_ACHIEVEMENT_9_28_DESC:0 "Start as an Ibadi nation and eliminate all rival schools of Islam (do not convert to another religion)."
  NEW_ACHIEVEMENT_9_29_NAME:0 "Back to the Piast"
- NEW_ACHIEVEMENT_9_29_DESC:0 "As Mazovia or Silesia, form the nation of Poland."
+ NEW_ACHIEVEMENT_9_29_DESC:1 "As Mazovia, Glogow or Opole, form the nation of Poland."
  NEW_ACHIEVEMENT_9_30_NAME:0 "Great Perm"
  NEW_ACHIEVEMENT_9_30_DESC:0 "As Perm, own or have a subject own the Russian, Siberian, Scandinavian, Canadian, Hudson Bay and Cascadian Regions."
  NEW_ACHIEVEMENT_9_31_NAME:0 "Lazarus"
@@ -344,7 +344,7 @@
  NEW_ACHIEVEMENT_10_14_NAME:0 "Kuban Cigars"
  NEW_ACHIEVEMENT_10_14_DESC:0 "As Kuba, own or have a subject own Havana and be the world’s leading producer of Tobacco."
  NEW_ACHIEVEMENT_10_15_NAME:0 "Kushite Restoration"
- NEW_ACHIEVEMENT_10_15_DESC:0 "As a Nubian culture nation, own the entire Egyptian region as core provinces."
+ NEW_ACHIEVEMENT_10_15_DESC:1 "As a Nubian culture nation, own or have a non-Tributary subject own the entire Egyptian region."
  NEW_ACHIEVEMENT_10_16_NAME:0 "The Fezzan Corridors"
  NEW_ACHIEVEMENT_10_16_DESC:0 "As Fezzan, control at least 90% of the trade power in Tunis, Katsina, Safi and Timbuktu."
  NEW_ACHIEVEMENT_10_17_NAME:0 "Victorian Three"
