--- a/extract/localisation/sprite_packs_l_english.yml
+++ b/extract/localisation/sprite_packs_l_english.yml
@@ -126,6 +126,7 @@
  dlc042_ned_sprite_pack:0 "Netherlands Great Nation Sprites"
  dlc042_por_sprite_pack:0 "Portugal Great Nation Sprites"
  dlc042_tur_sprite_pack:0 "Ottoman Great Nation Sprites"
+ dlc042_rus_sprite_pack_culture_group:0 "East Slavic Sprites"
  dlc043_frn_sprite_pack:0 "Frankfurt Sprites"
  dlc043_ham_sprite_pack:0 "Hamburg Sprites"
  dlc043_num_sprite_pack:0 "Nuremberg Sprites"
