Save/Update files [ci skip]

--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -1469,7 +1469,7 @@
  flavor_bng.3.d:0 "近年、ハリファタバードの都市がある、シュンドルボンの深いマングローブ森林の一部が切り開かれた。地元の支配者、カーン・ジャハーン・アリは、1430年代にこの地域を切り開いただけでは満足せず、彼の生涯をかけてモスクや偉大な建築物で街を満たした。バゲルハットの多くのモスクの中には、80以上のドームを持つ巨大なシャイト・ゴンブス・モスクがあり、おそらくインドで最大のモスクである。"
  flavor_bng.3.a:0 "OK"
  flavor_bng.4.t:0 "三角州の開拓"
- flavor_bng.4.d:0 "ベンガルはその肥沃な土と豊かな収穫で有名である。しかし、ガンジスの大きなデルタは依然として濃い密林と湿地で覆われている。我々の成長する人口を広げるために土地を切り開くことは、誰もが覚えているよりもゆっくりだが着実に長く続いている工程である。\n最近、彼らの多くがスーフィーである、いくつかの神聖な人々が、これらの工程に関与し始めている。これらの神聖な人々は我々の民衆の心を動かし、土地開墾の工程は急に以前よりもずっとスムーズに進行しているようだ。物事が今正しい方向に動いていることを確認するかのように、偉大な川ガンジスの流れは、この過程をさらに助ける方法へと移行している。"
+ flavor_bng.4.d:0 "ベンガルはその肥沃な土と豊かな収穫で有名である。しかし、ガンジスの大きなデルタは依然として濃い密林と湿地で覆われている。我々の成長する人口を広げるために土地を切り開くことは、誰もが覚えていないほど長い間、ゆっくりだが、着実に長く続いてきた工程である。\n最近、多くの聖人たち、その多くはスーフィー教徒の人々が、これらの工程に関与し始めている。これらの聖人たちは我々の民衆の心を動かし、土地開墾の工程は急に以前よりもずっとスムーズに進行しているようだ。物事が今正しい方向に動いていることを確認するかのように、偉大な川ガンジスの流れそのものが、この過程をさらに促進する方向へと変化している。"
  flavor_bng.4.a:0 "OK"
  flavor_bng.5.t:0 "逃亡する貴族"
  flavor_bng.5.d:0 "デリー・スルターン朝の崩壊後、かつての主要な貴族の大部分は我々の国境を越えた。貴族たちは自身のために新しい人生を築き、いつか、家族が失ったものを取り戻すことを決意している。\nこれは、アフガニスタン人、ウズベク人、トゥーラーン人、ペルシア人の異種の集団であり、これらのすべてが多大な権力を握っている。確かに我が国は、彼らの人脈と経験から利益を得ることができる。同時に彼らの到着は我々の土地に社会的緊張と不穏を引き起こしている。"
