--- a/source/localisation/diplomacy_l_english.yml
+++ b/source/localisation/diplomacy_l_english.yml
@@ -490,7 +490,7 @@
  superiority_chinese_unification_desc:0 "戦争目標は他の中華地域に私たちの優位性を誇示することです。"
  CHINESE_UNIFICATION_WAR_NAME:0 "$ORDER$$FIRST$・$SECOND$中華覇権戦争"
  CELESTIAL_EMPIRE_WAR_NAME:0 "$ORDER$$FIRST$・$SECOND$の天命争奪戦争"
- FORCE_MIGRATION_WAR_NAME:0 "$ORDER$$FIRST$・$SECOND$強制退去戦争"
+ FORCE_MIGRATION_WAR_NAME:0 "$ORDER$$FIRST$・$SECOND$強制移住戦争"
  IN_WARGOAL_COST:1 "戦争目標の一部であるため、$WHO|Y$に対して追加の£dip£コストは発生しません！"
  NOT_IN_WARGOAL_COST:1 "戦争目標の一部ではないため、$WHO|Y$に対して追加で§Y$COST$§!£dip  の外交力コストが発生します！"
  UNLAWFUL_TERRITORY_WARN:0 "§R不法な領土。皇帝が返還を要求してくる可能性があります。§!"
