--- a/source/localisation/eldorado_l_english.yml
+++ b/source/localisation/eldorado_l_english.yml
@@ -72,7 +72,7 @@
  drunken_explorer:0 "酔っぱらいの冒険者"
  desc_drunken_explorer:0 "果実酒に酔っ払った冒険者は、国民全体と自分自身に恥をかかせた。"
  seven_cities_events.1.t:0 "エル・ドラド"
- seven_cities_events.1.d:0 "死の床にある冒険者は、彼の従者が湖に金や宝石の小物を投げ捨てながら、金を洗い落とした、金粉で覆われた王の物語を語った。その男はエル・オンブレ・ドラド本人によって救助され、儀式と黄金の街を自分の目で見たと主張している。彼は病に倒れる前に、エル・ドラドへの道を示していると主張する未完成の地図を作った。今、我々は$PROVINCENAME$に到着し、一つの目印が、冒険家の地図に描かれた数少ない、大まかなものと一致している。"
+ seven_cities_events.1.d:0 "ある冒険者が死の床にて王の物語を語った。その王は金粉を全身にまぶし、従者が湖に金や宝石の装身具を投げ込んでいる間に、湖で金粉を洗い落とすのだという。その男はエル・オンブレ・ドラド本人によって救助され、儀式と黄金の街を自分の目で見たと主張している。彼は病に倒れる前に、エル・ドラドへの道を示していると主張する粗雑な地図を作った。そして今、我々が$PROVINCENAME$に到着すると、一つの目印が、冒険家の地図に描かれた数少ない、ざっくりした目印の一つと一致している。"
  seven_cities_events.1.a:0 "地図に従ってみよう！ものすごい財宝にたどり着けるかもしれない。"
  seven_cities_events.1.b:0 "もっと現実的に価値あるものを見つけよう。"
  seven_cities_events.2.t:0 "若返りの泉"
