--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -1896,7 +1896,7 @@
  desc_mercs_not_allowed_to_loot_morale:0 "我々の雇用下にある傭兵団は、彼らが進軍する土地をおいて、好き放題に略奪することを制限されている。"
  cb_change_government_great_peasants_war:0 "農民を粉砕"
  cb_change_government_great_peasants_war_desc:0 "農民は国家を営む事業など持っていない。彼らを強制的に元の居場所へと戻す必要がある。"
- gpw_cb_tt:0 "帝国の加盟国は、開戦事由§Y農民を粉砕§!をゲーム終了まで獲得します。"
+ gpw_cb_tt:0 "帝国領邦は、開戦事由§Y農民を粉砕§!をゲーム終了まで獲得します。"
  gpw_noble_power_weak:1 "帝国全体で貴族階級は、忠誠§G+5%§!と影響力§Y+5%§!をゲーム終了まで持ちます。"
  gpw_noble_power_strong:2 "帝国全体で貴族階級は、忠誠§G+10%§!と影響力§Y+10%§!をゲーム終了まで持ちます。"
  gpw_peasant_power_strong:1 "帝国全体で貴族階級は、忠誠§R-10%§!と影響力§Y-10%§!をゲーム終了まで持ちます。"
@@ -3328,3 +3328,4 @@
  LORD_ADMIRAL_fem:0 "海軍卿"
  desc_mary_is_on_the_throne:0 "彼女の馬が事故を起こさなくなる。"
  incidents_bur_inheritance.3.b.tt:0 "戦争は§Y10§!日後に開始します。"
+ shadow_kingdom_incident_penalty_tt:0 "Lose §R0.2§! Imperial Authority per §YDevelopment§! from the Italian provinces which leave the Holy Roman Empire."
