--- a/source/localisation/scandinavia_l_english.yml
+++ b/source/localisation/scandinavia_l_english.yml
@@ -260,7 +260,7 @@
  swe_defenders_of_the_reformers_ct:0 "§Yキリスト教§!であるが、§Y正教会§!や§Yカトリック§!ではない。"
  swe_protestant_sword_title:1 "[Root.GetPreviewColorSWE]プロテスタントの剣[Root.GetPreviewColorSWE_end]"
  swe_protestant_sword_desc:0 "宗教改革が野火のように広がる中、カトリックは宗教改革派を弾圧し、その土地から追放しようとしている。カトリックの敵意は火を見るより明らかで、「異端を根絶やしにする」ための攻撃戦争を宣言するのも時間の問題である。宗教改革の剣となり、このカトリックの狂信者たちに宗教改革を止めさせないようにせねばならない！"
- swe_protestant_sword_at:0 "§Y神聖ローマ帝国§!の任意の国家が、§Y[Root.GetName]§!によって強制改宗され、§Y[Root.Religion.GetName]§!信仰に従っている。"
+ swe_protestant_sword_at:1 "Any country of the §YHoly Roman Empire§! has been force converted by §Y[Root.GetName]§! and follows the §Y[Root.Religion.GetName]§! faith.\n§YForming any other tag will reset the last force-conversion.§!"
  swe_protestant_sword_bt:0 "自国の同盟国のいずれかが§Yプロテスタント§!であり、§Y神聖ローマ帝国§!の構成国であり、§Y選帝侯§!であるか、もしくは開発度§Y100§!以上（その国家の従属国も含む）である。"
  swe_protestant_sword_ct:0 "§Yプロテスタント§!側にいる場合、§Y連盟戦争§!中、補正「§Yプロテスタント連盟のための戦い§!」を獲得し、以下の効果を得ます：\n教会権力補正：§G+25.0%§!\n月間情熱：§G+1.00§!\n規律：§G+5.0%§!\n戦闘からの陸軍伝統：§G+100.0%§!\n\n§Y本補正は連盟戦争終了と同時に失効する。§!"
  swe_protestant_sword_dt:0 "§Yプロテスタント連盟§!の結成を引き起こす決断が選択可能になる。"
@@ -765,7 +765,7 @@
  norse_events.1.d:0 "テュールの正義が我が道である。"
  norse_events.1.e:0 "ニョルズの波が我が[Root.GovernmentName]の富をもたらすのだ。"
  norse_events.1.f:0 "スノトラの叡智が我々を明るい未来へと導く。"
- swe_historical_friends_nor_tt:1 "@NOR ノルウェーが自国の従属国で自国への評価が§Y50§!以上の時にこのミッションを達成した場合、相互の歴史的友好がさらに深まる"
+ swe_historical_friends_nor_tt:1 "@NOR£ノルウェーが自国の従属国で自国への評価が§Y50§!以上の時にこのミッションを達成した場合、相互の歴史的友好がさらに深まる"
  blackmailing:0 "脅迫"
  blackmailing_desc:0 "最上位の聖人君子と呼ばれる同盟者にも、隠したい秘密は持っているものだ。同盟者と良好な関係を築くことは常に素晴らしい始まりであるのだが、本当に彼らを意のままに操るには、彼らの秘密を常に一覧化しておき、もし彼らが我が善意に背いたら、それを利用すべきだ。"
  expanded_policies:0 "拡張的な政策"
@@ -2172,7 +2172,7 @@
  liv_lva_strengthen_the_state_title:1 "[Root.GetPreviewColorLIV]騎士団の世俗化[Root.GetPreviewColorLIV_end]"
  liv_lva_strengthen_the_state_desc:0 "我が騎士団の法と思想は、元々リヴォニア帯剣騎士団によって作られたものなので、対異教徒戦が基となっている。今となっては、これらの法は少なくとも200年前のものであり、ゆえに、相当時代遅れである。\n騎士団はその目的を果たしたが、今こそ世俗化された国家に改革する時だ。"
  liv_lva_competent_rule_title:1 "州議会の設立"
- liv_lva_competent_rule_desc:1 "リヴォニア領には、ハンザ都市に敬虔なる司教区、そして我が騎士団の本拠がある。当然、内輪もめや紛争は避けられない。アンブンディ大司教は、これらの問題を解決するために、1419年に最初の州議会ーリヴォニア議会ーを初めて召集、発足した。\nしかし、この古い議会は時代遅れであり、国家の問題全てを網羅できていない。古い州議会を廃止し、自国にとって適切な国会を設立する時だ。"
+ liv_lva_competent_rule_desc:1 "The Livonian lands are home to the Hanseatic cities, the pious bishoprics and our Order. Naturally, internal disputes and conflicts are inevitable. Archbishop Ambundii initialized the first gathering of the Landtag - the Livonian Diet - in order to resolve these issues in 1419.\nHowever, the old diet is dated and does not cover all affairs of the state. It is time to abolish the old Landtag and establish a proper State Diet for our country."
  liv_handle_internal_struggle_title:0 "リヴォニア連盟"
  liv_handle_internal_struggle_desc:0 "リヴォニア連盟は、1435年に誕生した我が支配下にある緩やかな連合体である。これは、ドイツによるクロニア、リヴォニア、エストニアの支配やノヴゴロドとその正教会の脅威から守るための、5司教区とリヴォニア騎士団の防衛同盟である。\nしかし、この連盟内の各司教区は自国の臣下というわけではなく、自治国家であるため、しばしば互いに些細な対立をしている。この連盟を解消し、各司教区領を自領に組み入れる時だ。"
  liv_expand_army_title:0 "軍の拡大"
@@ -3248,7 +3248,7 @@
  livonian_nation_batlic_german_title:0 "リヴォニアの形成"
  livonian_nation_batlic_german_desc:0 "クロニア、リヴォニア、エストニアの地はかつてリヴォニア騎士団に属していた。もし騎士団が義務を果たせなくなった場合は、我々が代わりに繁栄とリヴォニアの勇気を導く案内役を務めるだろう。"
  sell_indulgence_title:0 "免罪符の売却"
- sell_indulgence_desc:0 "[From.GetName]@[From.GetTag]の[From.Monarch.GetTitle]の罪を悔い改めるために、免罪符を売却します。\n\n§Y[From.GetName]§!に免罪符を売却すると教皇への影響力を§Y50§!消費します。もし受諾されれば、[From.GetName]の§G3か月§!分の収入が§Y[Root.GetName]§!に支払われるのと引き換えに、安定度が§G1§!、威信が§G10§!増加します。\n\n§Y改革欲求が§R0.25%§!増加します。§!"
+ sell_indulgence_desc:0 "@[From.GetTag][From.GetName][From.Monarch.GetTitle]の罪を悔い改めるために、免罪符を売却します。\n\n§Y[From.GetName]§!に免罪符を売却すると教皇への影響力を§Y50§!消費します。もし受諾されれば、[From.GetName]の§G3か月§!分の収入が§Y[Root.GetName]§!に支払われるのと引き換えに、安定度が§G1§!、威信が§G10§!増加します。\n\n§Y改革欲求が§R0.25%§!増加します。§!"
  sell_indulgence_tooltip:0 "彼を罪から解放するために免罪符を売却します。"
  sell_indulgence_dialog:0 "[This.GetName]が[Root.GetName]に免罪符の売却を提案しています。受諾すれば我が国の§R3か月§!分の収入と引き換えに、安定度§G1§!と威信§G10§!が増加するでしょう。\n\n§Y受諾すれば改革欲求が§R0.25%§!増加します。§!"
  sell_indulgence_alert_tooltip:0 "免罪符の売却を提案されました。"
@@ -3808,8 +3808,8 @@
  pol_every_courthouse_1_random_dev_tt:0 "§Y裁判所§!または§Y役所§!が建っている州すべてでランダムの基礎開発度が§G1§!増加"
  pol_as_long_as_allies_or_subjects:0 "同盟国か互いの従属国であり続ける限り"
  pol_institutions_will_slowly_grow_in_262_tt:0 "\n[262.GetName]で今後制度が緩やかに増えていく"
- pol_if_mol_is_subject_tt:1 "\n@MOL §Yモルダヴィア§!が従属国である状態でミッションを達成した場合："
- pol_relegate_mol_to_vassal_tt:0 "@MOL §Yモルダヴィア§!が通常の§Y従属国§!に格下げされます"
+ pol_if_mol_is_subject_tt:1 "\n@MOL£§Yモルダヴィア§!が従属国である状態でミッションを達成した場合："
+ pol_relegate_mol_to_vassal_tt:0 "@MOL£§Yモルダヴィア§!が通常の§Y従属国§!に格下げされます"
  enable_unite_balkans_cb_tt:0 "開戦事由「§Yバルカン統一§!」が使用可能になります"
  pol_hold_moscow_and_novgorod_and_neva_tt:0 "[33.GetName]、[310.GetName]、[295.GetName]も領有している状態で§Yミッション§!を達成した場合、以下の報酬を獲得します："
  pol_10_streltsy_in_capital:0 "§Gストレリツィ§!§Y歩兵連隊§!10連隊が自国の首都で召集されます"
@@ -3821,20 +3821,20 @@
  pol_via_alliance_or_subjugation_tt:0 "\nそうではなく、自国と§Y同盟§!か§Y従属§!でミッションを達成した場合、自国と§Yスカンディナヴィア§!の同盟国双方が以下を獲得します："
  pol_via_alliance_or_subjugation_2_tt:1 "§Y同盟§!か§Y従属§!によってミッションを達成した場合、§Y歴史的友好国§!となり、同時に："
  pol_production_of_metal_25_tt:0 "今後§Y20年間§!：\n§Y金属§!の生産：§G+25%§!"
- pol_form_plc_earlier_tt:0 "\n統治技術レベル8で@PLC §Pポーランド・リトアニア§!に変態できるようになります"
+ pol_form_plc_earlier_tt:0 "\n統治技術レベル8で@PLC£§Pポーランド・リトアニア§!に変態できるようになります"
  pol_lavra_2_or_3_tt:0 "記念碑「§Yキエフ・ペチェールシク大修道院§!」を§Y1§!回以上アップグレードを行った"
  pol_changes_tt:0 "§Rこの開発はポーランドにとって不利に働く開発を生じるでしょう§!"
  pol_every_elector_gets_tt:0 "\n全ての§Y選帝侯§!は以下を獲得します："
  pol_4_400_dev_tt:0 "自国の従属国§Y4ヶ国§!以上で総開発度が§Y400§!以上"
- pol_delegate_the_formation_of_royal_prussia_tt:1 "この選択肢により、@PRU §Yプロイセン公国§!を自国の旗の下に結成できます。"
+ pol_delegate_the_formation_of_royal_prussia_tt:1 "この選択肢により、@PRU£§Yプロイセン公国§!を自国の旗の下に結成できます。"
  pol_more_army_prof_per_general_tt:0 "\n今後§Y20年間§!、将軍雇用時に追加の§Y軍熟練度§!§G+25%§!を獲得します"
  pol_daugava_estuary_will_be_expanded_tt:0 "§Yダウガヴァ河口§!が拡張される"
  pol_if_chose_hre_path:0 "イベント「§Yヴワディスワフ3世の後継者§!」で§Y地方貴族§!を選んだ場合、今後§Y20年間§!、傭兵が§G軍熟練度§!のコストが減少すると共に："
  pol_ruler_ts_14:0 "[Root.Monarch.GetName]の£adm£・£dip£・£mil£の合計値が§Y14§!以上"
- pol_unlock_when_plc_tt:0 "\nこのミッションは、@PLC コモンウェルスに変態すると解禁されます"
+ pol_unlock_when_plc_tt:0 "\nこのミッションは、@PLC£コモンウェルスに変態すると解禁されます"
  pol_6_issues_passed:0 "議会で§Y6§!以上の議題を可決した（§Y[Root.GetNumOfIssuesPassed]§!/§Y6§!）。"
  pol_alternatively_rebellion_tt:0 "\nそうでない場合、以下のイベントが発生し、§Yマグナート貴族§!が自領内で§R蜂起§!します："
- pol_claim_lithuanian_lands:0 "@LIT §Yリトアニア§!大公国が領有する全州に請求権を獲得します"
+ pol_claim_lithuanian_lands:0 "@LIT£§Yリトアニア§!大公国が領有する全州に請求権を獲得します"
  6_dip_rep_tt:0 "外交評判が§Y6§!以上"
  pol_centralized_royal_court_authority_modifier:0 "王宮権威の一元化"
  pol_crimson_privileges_modifier:0 "真紅の特権"
@@ -4060,11 +4060,11 @@
  lit_every_overlord_owned_or_subject_prov_1_random_dev:1 "自国か自国の従属国（非朝貢国）か自国の§Y宗主国§!が領有するステップの§Y州§!全てで、ランダムに開発度が§G1§!上がる"
  lit_better_than_2_gp_tt:0 "列強ランクが§Y2§!位以上"
  lit_halve_hegemony_reqs_tt:0 "\n§P覇権を獲得するための条件が緩和されます。§!"
- lit_declined_pu:0 "@POL §Yポーランド§!との同君連合を拒否した"
- lit_accepted_pu:0 "@POL §Yポーランド§!との同君連合を受け入れた"
+ lit_declined_pu:0 "@POL£§Yポーランド§!との同君連合を拒否した"
+ lit_accepted_pu:0 "@POL£§Yポーランド§!との同君連合を受け入れた"
  lit_claim_livonian_lands_tt:0 "リヴォニア領に請求権を獲得する"
  lit_take_pu_lesser:0 "\n§Yポーランド王家§!の従属国になる場合："
- lit_poland_subject_tt:0 "もし、@POL §Yポーランド§!が自国の従属国である場合、今後§Y5§! 年間彼らの土地を開発した場合、§Y2倍§!の恩恵を受ける"
+ lit_poland_subject_tt:0 "もし、@POL£§Yポーランド§!が自国の従属国である場合、今後§Y5§!年間彼らの土地を開発した場合、§Y2倍§!の恩恵を受ける"
  lit_4_ca_tt:0 "§Y4§!以上の§Y文化受容§!を行って、このミッションを達成した場合："
  lit_enable_nomads_for_30_years:0 "§Y30年間§!、§Y部族§!階級を有効にする"
  25_permanent_power_projection:1 "戦力投射のミッション報酬§Y（永続）§!"
@@ -4089,7 +4089,7 @@
  flavor_lit.18.d:0 "リトアニア地域で一番最初に書籍印刷を行なった一人であるフランツィスク・スカリナは、ポロツクの裕福な環境で育ちました。彼はクラクフ大学の学生として勉学に励み、そこから美術の学位を取得、その後、イタリアのパドヴァ大学で医学の博士号を取得しました。数年後、学者生活を終えた後に、プラハとヴィルニュスの間でいくつかの印刷所を設立しました。彼が印刷した作品の中には、詩篇や多言語翻訳した聖書といったものも含まれます。"
  flavor_lit.18.a:0 "こうして、我々は知恵と科学の普及を知るのだ。"
  flavor_lit.19.t:0 "フメリヌィーツィクィイの反乱"
- flavor_lit.19.d:0 "宮廷内で最も貧しい者たちであり、機動部隊の根幹をなしているコサックたちが、国の最高権力者に最後通牒を突きつけました。宮廷内の最近の動向は彼らのヘトマンたちを非常に不愉快にさせ、今や大胆にもて独立を要求しています。彼らの独立願望はルテニアにヘーチマン国家を作るという非現実的な夢に注ぎ込まれています。もし彼らの要求が受け入れられなければ、国内の地方全域で残虐行為と略奪が実行される恐れがあります。"
+ flavor_lit.19.d:0 "宮廷内で最も貧しい者たちであり、機動部隊の根幹をなしているコサックたちが、国の最高権力者に最後通牒を突きつけました。宮廷内の最近の動向は彼らのヘトマンたちを非常に不愉快にさせ、今や大胆にも独立を要求しています。彼らの独立願望はルテニアにヘーチマン国家を作るという非現実的な夢に注ぎ込まれています。もし彼らの要求が受け入れられなければ、国内の地方全域で残虐行為と略奪が実行される恐れがあります。"
  flavor_lit.19.a:0 "彼らが望んでいる自治を与えよ。"
  flavor_lit.19.b:0 "鞭を取ってこい！"
  flavor_lit.19.c:0 "ステップが呼んでいる！"
@@ -4406,7 +4406,7 @@
  hsa_permanent_mod_if_50_trade_in_lubeck:0 "§Yリューベック§!交易ノードで交易力が§Y50%§!以上で完了した場合、本補正は§Y恒久§!になります。"
  hsa_every_level_lowers_corruption_tt:0 "全レベルのこの顧問は§Y腐敗§!を減少させます"
  largest_trade_fleet_in_europe_ttt:0 "ヨーロッパ内で最大の§Y交易艦船§!を有している"
- hsa_hamburg_dev_per_member:0 "@HAM §Yハンブルク§!の我々への評価が§Y160§!以上でミッションを達成した場合、貿易同盟全体に§G開発度コスト減少§!ボーナスを獲得し、同盟の加盟国数に応じて効果が増加します。"
+ hsa_hamburg_dev_per_member:0 "@HAM£§Yハンブルク§!の我々への評価が§Y160§!以上でミッションを達成した場合、貿易同盟全体に§G開発度コスト減少§!ボーナスを獲得し、同盟の加盟国数に応じて効果が増加します。"
  hsa_has_at_least_75_vessels:0 "§Y75§!隻以上の艦船を有している"
  hsa_imperial_favor_tt:0 "§Y神聖ローマ帝国§!の我々への評価が§Y100§!以上の場合、彼らに影響を与えて、§Yホルシュタイン§!に中核を獲得します。"
  hsa_reduce_denmark_trade_tt:1 "デンマークのホルシュタインでの敗北は、§Yリューベック§!市場周辺の彼らの保持に§G悪影響§!をもたらすでしょう"
