--- a/source/localisation/sprite_packs_l_english.yml
+++ b/source/localisation/sprite_packs_l_english.yml
@@ -327,3 +327,4 @@
  dlc120_YI_sprite_pack:0 "彝のスプライト"
  dlc137_LOW_sprite_pack:0 "ニーダーザクセンのスプライト"
  dlc137_SLO_sprite_pack:0 "スロベニアのスプライト"
+ dlc042_rus_sprite_pack_culture_group:0 "East Slavic Sprites"
